objects/EUR_CRM_CTM_Template_Filter_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Field_API_Names__c</fullName>
        <label>Field API Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Field_Values__c</fullName>
        <label>Field Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Operators__c</fullName>
        <label>Operators</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Template_Name__c</fullName>
        <label>Template Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CTM Template Filter Setting</label>
    <pluralLabel>CTM Template Filter Setting</pluralLabel>
</CustomObject>